DOCKER-ECR-ECS/securitygroup.tf
# ECS SG

resource "aws_security_group" "ecs-securitygroup" {
  vpc_id      = "${aws_vpc.main.id}"
  name        = "ecs"
  description = "security group for ecs"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = ["${aws_security_group.myapp-elb-securitygroup.id}"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "ecs"
  }
}

# ELB SG

resource "aws_security_group" "myapp-elb-securitygroup" {
  vpc_id      = "${aws_vpc.main.id}"
  name        = "myapp-elb"
  description = "security group for ecs"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "myapp-elb"
  }
}
